Created Redis configuration class RedisConfig, the queue for storing URL's in Deduplicator has been replaced by Redis.  In UrlExtractor has been added functional to extract additional information about URL's from a document.